# asr-linux-cpp-demo

./: README.md  请先读README.md.txt
include/: BDSSDKMessage.hpp  BDSpeechSDK.hpp
include/ASR/: .bds_ASRDefines.hpp.swo  bds_ASRDefines.hpp  bds_asr_key_definitions.hpp  bds_wakeup_key_definitions.hpp
sample/asr/: .BDSpeechSDK2.supp.swp  Makefile  README.md  build_and_run.sh  valgrind.sh
sample/asr/src/: main.cpp
sample/asrDemo-srt/: CMakeLists.txt  README.md  build_and_run.sh
sample/asrDemo-srt/lib-src/: gflagsCMakeLists.txt  glogCMakeLists.txt  jsoncppCMakeLists.txt
sample/asrDemo-srt/scripts/: build-env.sh  convert-audio.sh  valgrind.sh
sample/asrDemo-srt/src/: common.cpp  common.h  main.cpp  recognizer.cpp  recognizer.hpp  srt_file_listener.cpp  srt_file_listener.hpp
sample/asrDemo2/: CMakeLists.txt  README.md
sample/asrDemo2/pcm/: 2.pcm
sample/asrDemo2/run/: Makefile  build_and_run.sh
sample/asrDemo2/script/: backup_log.sh
sample/asrDemo2/src/: yours_PrintResultListener.cpp  yours_PrintResultListener.hpp  yours_main.cpp
sample/asrDemo2/src/asrdemo/: AsrdemoController.cpp  AsrdemoController.hpp  ResultListener.cpp  ResultListener.hpp  StatusListener.cpp  StatusListener.hpp  Util.cpp  Util.hpp  common.h
